criação das views

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,15 +7,40 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>{% block title %}{% endblock %}</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"></script>
+    <title>MAC0499</title>
 </head>
-<body>
-<nav class="navbar navbar-dark bg-dark">
-
-</nav>
-<div class="container jumbotron" style="background:white">
-{% block main %}
-{% endblock %}
+<body style="background-color: gainsboro">
+<div class="container shadow bg-white rounded">
+    <nav class="navbar">
+        <a class="navbar-brand" href="#">MAC0499</a>
+    </nav>
 </div>
+
+<p></p>
+
+<div class="container shadow p-3 bg-white rounded">
+    <div class="jumbotron shadow" style="background-color: whitesmoke">
+        <h3>{% block title %}{% endblock %}</h3>
+        <hr>
+        <p>{% block text %}{% endblock %}</p>
+    </div>
+    {% block main %}
+    {% endblock %}
+</div>
+
+<p></p>
+<div class="container shadow p-3 bg-white rounded">
+    <small>2020 Desenvolvido por Julio Kenji Ueda</small>
+</div>
+
 </body>
 </html>
