--- a/ml/templates/ml/index.html
+++ b/ml/templates/ml/index.html
@@ -14,7 +14,7 @@ Adicione, remova ou selecione os dados para o treinamento
 
 <p></p>
 {% if files %}
-<form action="{% url 'ml:configure' %}" method="post">
+<form id="configure" action="{% url 'ml:configure' %}" method="post">
     <table class="table table-hover">
         {% csrf_token %}
         {% for file in files %}
@@ -26,12 +26,25 @@ Adicione, remova ou selecione os dados para o treinamento
                 </div>
             </td>
             <td>
-                {% include 'ml/delete_modal.html' %}
+                <button form="delete" type="submit" name="pk" value="{{ file.id }}"
+                        class="btn btn-danger shadow rounded">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor"
+                         xmlns="http://www.w3.org/2000/svg">
+                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                        <path fill-rule="evenodd"
+                              d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                    </svg>
+                </button>
             </td>
         </tr>
         {% endfor%}
     </table>
-    <input type="submit" value="Treinar" class="btn btn-primary shadow rounded">
+    <input form="configure" type="submit" value="Configurar" class="btn btn-primary shadow rounded">
+</form>
+
+<form id="delete" action="{% url 'ml:delete' %}" method="post"
+      onsubmit="return confirm('Você tem certeza que deseja excluir este arquivo?')">
+    {% csrf_token %}
 </form>
 {% endif%}
 
