refatoração usando forms

--- a/ml/templates/ml/configure.html
+++ b/ml/templates/ml/configure.html
@@ -5,7 +5,17 @@ Configuração dos parâmetros
 {% endblock %}
 
 {% block text %}
-Ordene os arquivos do mais antigo ao mais novo
+<ol>
+    <li>
+        Ordene os arquivos do mais antigo ao mais recente
+    </li>
+    <li>
+        Defina o número de agrupamentos
+    </li>
+    <li>
+        Clique em Iniciar Treinamento e aguarde
+    </li>
+</ol>
 {% endblock %}
 
 {% block main %}
@@ -27,7 +37,7 @@ Ordene os arquivos do mais antigo ao mais novo
                 </div>
             </div>
         </div>
-        <input type="submit" value="Enviar" class="btn btn-primary shadow rounded">
+        <input type="submit" value="Iniciar Treinamento" class="btn btn-primary shadow rounded">
     </form>
 </div>
 {% endblock %}
