--- a/ml/templates/ml/index.html
+++ b/ml/templates/ml/index.html
@@ -5,47 +5,29 @@ Aprendizado de Máquina
 {% endblock %}
 
 {% block text %}
-Adicione, remova ou selecione os dados para o treinamento
+Adicione, remova ou selecione os arquivos para o treinamento
 {% endblock %}
 
 {% block main %}
 
 <a href="{% url 'ml:upload' %}" class="btn btn-primary shadow rounded">Adicionar arquivo</a>
-
 <p></p>
-{% if files %}
-<form id="configure" action="{% url 'ml:configure' %}" method="post">
-    <table class="table table-hover">
-        {% csrf_token %}
-        {% for file in files %}
-        <tr>
-            <td>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="{{ file.id }}" name="pk" value="{{ file.id }}">
-                    <label class="form-check-label" for="{{ file.id }}">{{file}}</label>
-                </div>
-            </td>
-            <td>
-                <button form="delete" type="submit" name="pk" value="{{ file.id }}"
-                        class="btn btn-danger shadow rounded">
-                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-                        <path fill-rule="evenodd"
-                              d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-                    </svg>
-                </button>
-            </td>
-        </tr>
-        {% endfor%}
-    </table>
-    <input form="configure" type="submit" value="Configurar" class="btn btn-primary shadow rounded">
-</form>
 
-<form id="delete" action="{% url 'ml:delete' %}" method="post"
-      onsubmit="return confirm('Você tem certeza que deseja excluir este arquivo?')">
+{% if form.pk|length %}
+<form method="post">
     {% csrf_token %}
+
+    <label>Selecione:</label>
+    {% for choice in form.pk %}
+    <div class="form-group form-check">
+        {{ choice }}
+    </div>
+    {% endfor %}
+
+    <input formaction="{% url 'ml:configure' %}" type="submit" value="Treinar" class="btn btn-primary shadow rounded">
+    <input formaction="{% url 'ml:delete' %}" type="submit" value="Remover" class="btn btn-danger shadow rounded">
+
 </form>
-{% endif%}
+{% endif %}
 
 {% endblock %}
