--- a/ml/templates/ml/upload.html
+++ b/ml/templates/ml/upload.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Adicionar dados
+Adicionar arquivo
 {% endblock %}
 
 {% block text %}
-Busque pelo arquivo a ser enviado
+Os arquivos estão disponíveis no <a href="http://www.ssp.sp.gov.br/transparenciassp/" target="_blank">Portal da Transparência da Secretaria da Segurança Pública de São Paulo</a>, na aba <b>Roubo de Celular</b>
 {% endblock %}
 
 {% block main %}
