--- a/ml/templates/ml/upload.html
+++ b/ml/templates/ml/upload.html
@@ -5,15 +5,20 @@ Adicionar arquivo
 {% endblock %}
 
 {% block text %}
-Os arquivos estão disponíveis no <a href="http://www.ssp.sp.gov.br/transparenciassp/" target="_blank">Portal da Transparência da Secretaria da Segurança Pública de São Paulo</a>, na aba <b>Roubo de Celular</b>
+Os arquivos estão disponíveis no <a href="http://www.ssp.sp.gov.br/transparenciassp/" target="_blank">Portal da
+    Transparência da Secretaria da Segurança Pública de São Paulo</a>, na aba <b>Roubo de Celular</b>
 {% endblock %}
 
 {% block main %}
 
-<form action="{% url 'ml:upload'%}" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Enviar" class="btn btn-primary shadow rounded">
-</form>
+<div class="card border-white">
+    <div class="card-body">
+        <form action="{% url 'ml:upload'%}" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Enviar" class="btn btn-primary shadow rounded">
+        </form>
+    </div>
+</div>
 
 {% endblock %}
