--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Bem-vindo, {{ user }}{% endblock %}
+{% block title %}Painel de Controle{% endblock %}
 
 {% block text %}{% endblock %}
 
