--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Righteous'>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
@@ -16,12 +17,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
             crossorigin="anonymous"></script>
-    <title>MAC0499</title>
+    <title>eRoubo</title>
 </head>
 <body style="background-color: gainsboro">
 <div class="container shadow bg-white rounded">
     <nav class="navbar">
-        <a class="navbar-brand" href="{% url 'index:index' %}">MAC0499</a>
+        <a class="navbar-brand" href="{% url 'index:index' %}" style="font-family: Righteous; font-size: xx-large">eRoubo</a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 {% if user.is_authenticated %}
@@ -61,7 +62,7 @@
 <p></p>
 
 <div class="container shadow p-3 bg-white rounded">
-    <small>2020 Desenvolvido por Julio Kenji Ueda</small>
+    <small>2020 eRoubo desenvolvido por Julio Kenji Ueda</small>
 </div>
 
 </body>
