--- a/ml/templates/ml/configure.html
+++ b/ml/templates/ml/configure.html
@@ -19,28 +19,25 @@ Configuração dos parâmetros
 {% endblock %}
 
 {% block main %}
-
-<div class="container">
-    <form action="{% url 'ml:train'%}" method="post" id="train-form">
-        {% csrf_token %}
-        <div class="row">
-            <div class="col">
-                <label>Ordene os arquivos:</label>
-                {% for i in range %}
-                <div class="form-group">
-                    {{ select_form }}
-                </div>
-                {% endfor %}
+<form action="{% url 'ml:train'%}" method="post" id="train-form">
+    {% csrf_token %}
+    <div class="row">
+        <div class="col">
+            <label>Ordene os arquivos:</label>
+            {% for i in range %}
+            <div class="form-group">
+                {{ select_form }}
             </div>
-            <div class="col">
-                <div class="form-group">
-                    {{ n_clusters_form }}
-                </div>
+            {% endfor %}
+        </div>
+        <div class="col">
+            <div class="form-group">
+                {{ n_clusters_form }}
             </div>
         </div>
-        <button id="form-button" type="submit" class="btn btn-primary shadow rounded">Iniciar Treinamento</button>
-    </form>
-</div>
+    </div>
+    <button id="form-button" type="submit" class="btn btn-primary shadow rounded"><i class="material-icons" style="vertical-align: bottom">model_training</i> Treinar</button>
+</form>
 
 <script type="text/javascript">
     $(document).ready(function () {
@@ -51,6 +48,5 @@ Configuração dos parâmetros
         });
     });
 </script>
-
 {% endblock %}
 
