--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Righteous'>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
@@ -22,40 +23,46 @@
 <body style="background-color: whitesmoke">
 
 <div class="container shadow-lg my-3 py-3 px-5 bg-white rounded">
+
     <nav class="navbar">
         <a class="navbar-brand" href="{% url 'index:index' %}" style="font-family: Righteous; font-size: xx-large">eRoubo</a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 {% if user.is_authenticated %}
-                {{ user }} (<a href="{% url 'index:logout_user' %}">Sair</a>)
+                <a class="nav-link" href="{% url 'index:logout_user' %}" style="color: red">Sair <i
+                        class="material-icons" style="color: red; vertical-align: bottom">power_settings_new</i></a>
                 {% else %}
-                <a class="nav-link" href="{% url 'index:login_user' %}">Entrar</a>
+                <a class="nav-link" href="{% url 'index:login_user' %}">Entrar <i class="material-icons"
+                                                                                  style="color: dodgerblue; vertical-align: bottom">login</i></a>
                 {% endif %}
             </li>
         </ul>
     </nav>
+
     <div class="jumbotron shadow" style="background-color: ghostwhite">
         <h3>{% block title %}{% endblock %}</h3>
         <hr>
         <p>{% block text %}{% endblock %}</p>
     </div>
 
-    {% if messages %}
-    {% for message in messages %}
-    <div class="alert alert-{{ message.extra_tags }}" role="alert">
-        {{ message }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Fechar">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    {% endfor %}
-    {% endif %}
+    <div class="container">
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.extra_tags }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Fechar">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+        {% endif %}
 
-    {% block main %}
-    {% endblock %}
+        {% block main %}
+        {% endblock %}
+    </div>
 
     <hr>
-    <p style="text-align: center"><small>2020 eRoubo desenvolvido por Julio Kenji Ueda</small></p>
+    <p style="text-align: center"><small>2020 Desenvolvido por Julio Kenji Ueda</small></p>
 </div>
 
 
